--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,15 @@ section>.box-btn>.box-user>.box-img>img{
     border-radius: 100%;
 }
 
+#user{
+    background: rebeccapurple;
+}
 .content-page{
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
 }
 
 .content-page>.box-noticia{
